# agent-glow

./: .gitignore  LICENSE  README.md  pyproject.toml
src/hue_agent_status/: __init__.py  __main__.py  animation.py  autostart.py  cli.py  client.py  colors.py  commands_install.py  config.py  daemon.py  doctor.py  events.py  hooks_claude.py  hooks_codex.py  hue.py  lights_cmd.py  roles.py  secret_store.py  setup_cmd.py  state.py  wiz_cmd.py
src/hue_agent_status/backends/: __init__.py  base.py  composite.py  hue.py  wiz.py  wiz_protocol.py
tests/: conftest.py  test_animation.py  test_cli.py  test_client.py  test_colors.py  test_commands_install.py  test_composite.py  test_config.py  test_daemon.py  test_doctor.py  test_events.py  test_hooks_claude.py  test_hooks_codex.py  test_hue_controller.py  test_lights_cmd.py  test_permissions.py  test_roles.py  test_secret_store.py  test_setup_cmd.py  test_state.py  test_wiz_cmd.py  test_wiz_controller.py  test_wiz_protocol.py
